added rest of base html and doctype tag

--- a/public_html/tamunds1_jlin123.html
+++ b/public_html/tamunds1_jlin123.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <style>
@@ -22,6 +23,6 @@
   <a href="gdp.html">GDP and COVID-19</a>
   <br/><br/>
   <a href="trade.html">Trade and COVID-19</a>
-  
+
 </body>
 </html>
