--- a/public_html/covid.html
+++ b/public_html/covid.html
@@ -1,5 +1,132 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+    body {font-family: Arial, Helvetica, sans-serif;}
+    * {box-sizing: border-box;}
+
+    input[type=text], select, textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+      margin-top: 6px;
+      margin-bottom: 16px;
+      resize: vertical;
+    }
+
+    input[type=submit] {
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    input[type=submit]:hover {
+      background-color: #45a049;
+    }
+
+    .container {
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 20px;
+    }
+
+    .column {
+      float: left;
+      padding: 10px;
+    }
+
+    .left {
+      width: 25%;
+    }
+
+    .right {
+      width: 75%;
+    }
+
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    </style>
+  </head>
+  <?php
+    include 'open.php';
+  ?>
   <body>
+    <h2> Covid-19 Data </h2>
+    <div class="container row">
+      <h3> Option 1: Query by date and sorted attribute </h3>
+      <div class="column left">
+        <form action="covid_by_date.php" method="post">
+          <label for="covid_date">Enter date (01/22/2020 to 04/12/2020):</label>
+          <br>
+          <input type="date" id="covid_date" name="covid_date"
+                 min="2020-01-22" max="2020-04-12">
+          <br>
+          <br>
+          <label for="country">Sort by attribute:</label>
+          <select id="covid_attribute" name="covid_attribute">
+            <option value="numConfirmed">Number of Confimed Cases</option>
+            <option value="numDeaths">Number of Deaths</option>
+            <option value="numRecovered">Number of Recovered Cases</option>
+          </select>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+    </div>
+    <br>
+    <div class="container row">
+      <h3> Option 2: Query by date and country </h3>
+      <div class="column left">
+        <form action="covid_by_date.php" method="post">
+          <label for="covid_date">Enter date (01/22/2020 to 04/12/2020):</label>
+          <br>
+          <input type="date" id="covid_date" name="covid_date"
+                 min="2020-01-22" max="2020-04-12">
+          <br>
+          <br>
+          <label for="country">Select country/countries of interest:</label>
+          <select id="country" name="country" multiple>
+            <?php
+              $result = $mysqli->query("SELECT * FROM Country");
+              while ($row = $result->fetch_assoc()) {
+                            unset($countryId, $name);
+                            $id = $row['countryId'];
+                            $name = $row['name'];
+                            echo '<option value="'.$id.'">'.$name.'</option>';
+                          }
+            ?>
+          </select>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+    </div>
+    <br>
+    <div class="container row">
+      <h3> Option 3: Time series by country</h3>
+      <div class="column left">
+        <form action="covid_by_country.php" method="post">
+          <label for="country">Select one country of interest:</label>
+          <select id="country" name="country">
+            <?php
+              $result = $mysqli->query("SELECT * FROM Country");
+              while ($row = $result->fetch_assoc()) {
+                            unset($countryId, $name);
+                            $id = $row['countryId'];
+                            $name = $row['name'];
+                            echo '<option value="'.$id.'">'.$name.'</option>';
+                          }
+            ?>
+          </select>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+    </div>
   </body>
 </html>
