country dropdown works but only one word

--- a/tamunds1_jlin123.html
+++ b/tamunds1_jlin123.html
@@ -8,7 +8,7 @@
   <body>
 	<h1> COVID-19 Data Compared to UN Country Data</h1>
 
-  <a href="covid.html">COVID-19</a>
+  <a href="covid.php">COVID-19</a>
   <br/><br/>
   <a href="population.html">Population and COVID-19</a>
   <br/><br/>
