--- a/tamunds1_jlin123.html
+++ b/tamunds1_jlin123.html
@@ -10,19 +10,19 @@
 
   <a href="covid.php">COVID-19</a>
   <br/><br/>
-  <a href="population.html">Population and COVID-19</a>
+  <a href="population.php">Population and COVID-19</a>
   <br/><br/>
-  <a href="education.html">Education and COVID-19</a>
+  <a href="education.php">Education and COVID-19</a>
   <br/><br/>
-  <a href="labor_force.html">Labor Force and COVID-19</a>
+  <a href="labor_force.php">Labor Force and COVID-19</a>
   <br/><br/>
-  <a href="travel.html">Travel and COVID-19</a>
+  <a href="travel.php">Travel and COVID-19</a>
   <br/><br/>
-  <a href="health.html">Health and COVID-19</a>
+  <a href="health.php">Health and COVID-19</a>
   <br/><br/>
-  <a href="gdp.html">GDP and COVID-19</a>
+  <a href="gdp.php">GDP and COVID-19</a>
   <br/><br/>
-  <a href="trade.html">Trade and COVID-19</a>
+  <a href="trade.php">Trade and COVID-19</a>
 
 </body>
 </html>
