--- a/tamunds1_jlin123.html
+++ b/tamunds1_jlin123.html
@@ -1,28 +1,83 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
-      a {text-decoration: none;}
+    a {font-size: 20px;}
     </style>
+    <title> DB Project </title>
   </head>
   <body>
-	<h1> COVID-19 Data Compared to UN Country Data</h1>
-
-  <a href="covid.php">COVID-19</a>
-  <br/><br/>
-  <a href="population.php">Population and COVID-19</a>
-  <br/><br/>
-  <a href="education.php">Education and COVID-19</a>
-  <br/><br/>
-  <a href="labor_force.php">Labor Force and COVID-19</a>
-  <br/><br/>
-  <a href="travel.php">Travel and COVID-19</a>
-  <br/><br/>
-  <a href="health.php">Health and COVID-19</a>
-  <br/><br/>
-  <a href="gdp.php">GDP and COVID-19</a>
-  <br/><br/>
-  <a href="trade.php">Trade and COVID-19</a>
+  <div class="w3-container w3-green">
+	   <h1> COVID-19 Data Compared to UN Country Data</h1>
+  </div>
+  <div class="w3-container w3-light-gray">
+    <a href="covid.php">COVID-19</a>
+    <ul>
+      <li>Number of Confirmed Cases</li>
+      <li>Number of Deaths</li>
+      <li>Number of Recovered Cases</li>
+    </ul>
+    <a href="population.php">Population and COVID-19</a>
+    <ul>
+      <li>Estimated Population Size</li>
+      <li>Population Density</li>
+      <li>Population Rate of Increase</li>
+      <li>Life Expectancy</li>
+      <li>Infant Mortality Rate</li>
+      <li>Fertility Rate</li>
+    </ul>
+    <a href="education.php">Education and COVID-19</a>
+    <ul>
+      <li>Total Public Expenditure on Education </li>
+      <li>Government Expenditure on Primary Education </li>
+      <li>Government Expenditure on Secondary Education </li>
+      <li>Government Expenditure on Tertiary Education </li>
+    </ul>
+    <a href="labor_force.php">Labor Force and COVID-19</a>
+    <ul>
+      <li>Labor Force Participation Rate</li>
+      <li>Unemployment Rate</li>
+      <li>Percentage Employed in Agriculture</li>
+      <li>Percentage Employed in Industry</li>
+      <li>Percentage Employed in Service</li>
+    </ul>
+    <a href="travel.php">Travel and COVID-19</a>
+    <ul>
+      <li>International Migrant Percentage</li>
+      <li>Refugees and Asylum Seekers Percentage</li>
+      <li>Toursim Expenditure</li>
+      <li>Tourist/Visitor Arrivals</li>
+    </ul>
+    <a href="health.php">Health and COVID-19</a>
+    <ul>
+      <li>Health Expenditure</li>
+      <li>Refugees and Asylum Seekers Percentage</li>
+      <li>Physicians Per 1000</li>
+      <li>Percentage of Population with Access to Safe Sanitation Facilities</li>
+      <li>Percentage of Population with Access to Safe Water Facilities</li>
+    </ul>
+    <a href="gdp.php">GDP and COVID-19</a>
+    <ul>
+      <li>GDP</li>
+      <li>GDP Per Capita</li>
+      <li>Research and Development Expenditure</li>
+      <li>Health Expenditure</li>
+    </ul>
+    <a href="trade.php">Trade and COVID-19</a>
+    <ul>
+      <li>Major Trading Partners - Imports</li>
+      <ul>
+        <li>Country Name</li>
+        <li>Percent Import of Total Trade</li>
+      </ul>
+      <li>Major Trading Partners - Exports</li>
+      <ul>
+        <li>Country Name</li>
+        <li>Percent Export of Total Trade</li>
+      </ul>
+    </ul>
+  </div>
 
 </body>
 </html>
